export const enum EstadoBarraDeControl {
  ELIMINADA,
  INSERTADA,
  EN_DESUSO,
}
