import BarraControl from "../BarraControl";

export default abstract class FabricaBarra {
  public abstract crearBarra(): BarraControl;
}
