export const enum EstadoReactor {
  ENCENDIDO,
  APAGADO,
}
